// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[RadioButton] renders checked correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F3F6FA",
      "borderColor": "#0030CF",
      "borderRadius": 20,
      "borderWidth": 3,
      "color": "#ACB1C1",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": 0,
      "marginBottom": 20,
      "opacity": 1,
      "padding": 20,
      "right": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#606885",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 26,
            "justifyContent": "center",
            "marginTop": 4,
            "width": 26,
          },
          Object {
            "borderColor": "#0030CF",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#0030CF",
            "borderRadius": 8,
            "color": "#0030CF",
            "height": 15,
            "width": 15,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 34.285714285714285,
          },
          Object {
            "fontFamily": "ProximaNova-Extrabld",
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      label
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "ProximaNova-Bold",
            "fontSize": 30,
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      label small
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 30,
          },
          Object {
            "marginTop": 4,
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      description
    </Text>
  </View>
</View>
`;

exports[`[RadioButton] renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "rgba(96,104,133,0.06)",
      "borderColor": "rgba(96,104,133,0.06)",
      "borderRadius": 20,
      "borderWidth": 3,
      "color": "#ACB1C1",
      "flexDirection": "row",
      "justifyContent": "center",
      "left": 0,
      "marginBottom": 20,
      "opacity": 1,
      "padding": 20,
      "right": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#606885",
            "borderRadius": 12,
            "borderWidth": 2,
            "height": 26,
            "justifyContent": "center",
            "marginTop": 4,
            "width": 26,
          },
          null,
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 34.285714285714285,
          },
          Object {
            "fontFamily": "ProximaNova-Extrabld",
          },
          Object {
            "color": "#606885",
          },
        ]
      }
    >
      label
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "ProximaNova-Bold",
            "fontSize": 30,
          },
          Object {
            "color": "#606885",
          },
        ]
      }
    >
      label small
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 30,
          },
          Object {
            "marginTop": 4,
          },
          Object {
            "color": "#606885",
          },
        ]
      }
    >
      description
    </Text>
  </View>
</View>
`;
